extends 'base.html'; block title, content

--- a/product/templates/product/product_detail.html
+++ b/product/templates/product/product_detail.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Product Detail</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %} Product Detail {% endblock %}
+
+{% block content %}
 <h1>{{ product }}</h1>
 <ul>
     <li>{{ product.id }}</li>
@@ -13,5 +10,4 @@
 </ul>
 <a href="{% url 'product:edit' pk=product.id %}">EDIT</a>
 <a href="{% url 'product:list' %}">Go to Product List</a>
-</body>
-</html>
+{% endblock %}
