--- a/product/templates/product/product_confirm_delete.html
+++ b/product/templates/product/product_confirm_delete.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Remove Product</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %} Remove Product {% endblock %}
+
+{% block content %}
 <form action="" method="post">
     {% csrf_token %}
     {{ product }}, 이거 진짜 지울 거야?
     <input type="submit" value="찐?">
     <input type="button" value="취소" onclick="history.back();">
 </form>
-</body>
-</html>
+{% endblock %}
