apply Bootstrap bookmark_list, create, detail, update, confirm_delete

--- a/product/templates/product/product_confirm_delete.html
+++ b/product/templates/product/product_confirm_delete.html
@@ -5,7 +5,7 @@
 <form action="" method="post">
     {% csrf_token %}
     {{ product }}, 이거 진짜 지울 거야?
-    <input type="submit" value="찐?">
-    <input type="button" value="취소" onclick="history.back();">
+    <input type="submit" value="찐?" class="btn btn-danger">
+    <input type="button" value="취소" onclick="history.back();" class="btn btn-warning">
 </form>
 {% endblock %}
