--- a/product/templates/product/product_list.html
+++ b/product/templates/product/product_list.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 <!-- product_list: Product.objects.all(): DB에 있는 모든 Product 꺼내서 변수에 넣어줌 -->
-<a href="{% url 'product:add' %}">Add Product</a>
-<table>
+<a href="{% url 'product:add' %}" class="btn btn-success">Add Product</a>
+<table class="table">
     <thead>
     <tr>
         <th>#</th>
@@ -17,11 +17,11 @@
     <tbody>
         {% for product in product_list %}
         <tr>
-            <td>{{ forloop.counter }}</td>
-            <td><a href="{% url 'product:detail' pk=product.id %}">{{ product.name }}</a></td>
-            <td>{{ product.price }}원</td>
-            <td><a href="{% url 'product:edit' pk=product.id %}">EDIT</a></td>
-            <td><a href="{% url 'product:remove' pk=product.id %}">REMOVE</a></td>
+            <td class="align-middle">{{ forloop.counter }}</td>
+            <td class="align-middle"><a href="{% url 'product:detail' pk=product.id %}">{{ product.name }}</a></td>
+            <td class="align-middle">{{ product.price }}원</td>
+            <td class="align-middle"><a href="{% url 'product:edit' pk=product.id %}" class="btn btn-primary">EDIT</a></td>
+            <td class="align-middle"><a href="{% url 'product:remove' pk=product.id %}" class="btn btn-danger">REMOVE</a></td>
         </tr>
         {% endfor %}
     </tbody>
