--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,18 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %} {% endblock %}</title>
+    {# bootstrap css 추가 #}
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 </head>
 <body>
     {% block content %}
 
     {% endblock %}
+
+    {# bootstrap js 추가 #}
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </body>
 </html>
