--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     {% block content %}
+    {% endblock %}
 
+    {% block pagination %}
     {% endblock %}
 
     {# bootstrap js 추가 #}
