--- a/product/templates/product/product_detail.html
+++ b/product/templates/product/product_detail.html
@@ -9,5 +9,5 @@
     <li>{{ product.price }}원</li>
 </ul>
 <a href="{% url 'product:edit' pk=product.id %}" class="btn btn-primary">EDIT</a>
-<a href="{% url 'product:list' %}" class="btn btn-warning">Go to Product List</a>
+<a href="{% url 'product:list2' %}" class="btn btn-warning">Go to Product List</a>
 {% endblock %}
