FBV create_product

--- a/product/templates/product/product_list.html
+++ b/product/templates/product/product_list.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <!-- product_list: Product.objects.all(): DB에 있는 모든 Product 꺼내서 변수에 넣어줌 -->
-<a href="{% url 'product:add' %}" class="btn btn-success">Add Product</a>
+<a href="{% url 'product:add2' %}" class="btn btn-success">Add Product</a>
 <table class="table">
     <thead>
     <tr>
