--- a/product/templates/product/product_list.html
+++ b/product/templates/product/product_list.html
@@ -20,7 +20,7 @@
             <td class="align-middle">{{ forloop.counter }}</td>
             <td class="align-middle"><a href="{% url 'product:detail2' pk=product.id %}">{{ product.name }}</a></td>
             <td class="align-middle">{{ product.price }}원</td>
-            <td class="align-middle"><a href="{% url 'product:edit' pk=product.id %}" class="btn btn-primary">EDIT</a></td>
+            <td class="align-middle"><a href="{% url 'product:edit2' pk=product.id %}" class="btn btn-primary">EDIT</a></td>
             <td class="align-middle"><a href="{% url 'product:remove' pk=product.id %}" class="btn btn-danger">REMOVE</a></td>
         </tr>
         {% endfor %}
