--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <title>{% block title %} {% endblock %}</title>
     {# bootstrap css 추가 #}
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css'  %}">
 </head>
 <body>
     {% block content %}
