--- a/product/templates/product/product_list.html
+++ b/product/templates/product/product_list.html
@@ -8,6 +8,7 @@
     <thead>
     <tr>
         <th>#</th>
+        <th>제품 사진</th>
         <th>제품명</th>
         <th>가격</th>
         <th>EDIT</th>
@@ -18,6 +19,13 @@
         {% for product in product_list %}
         <tr>
             <td class="align-middle">{{ forloop.counter }}</td>
+            <td class="align-middle">
+            {% if product.image %}
+                <img src="{{ product.image.url }}" alt="{{ product.name }}" class="image-list">
+            {% else %}
+                제품사진 없음
+            {% endif %}
+            </td>
             <td class="align-middle"><a href="{% url 'product:detail2' pk=product.id %}">{{ product.name }}</a></td>
             <td class="align-middle">{{ product.price }}원</td>
             <td class="align-middle"><a href="{% url 'product:edit2' pk=product.id %}" class="btn btn-primary">EDIT</a></td>
