--- a/product/templates/product/product_create.html
+++ b/product/templates/product/product_create.html
@@ -2,7 +2,7 @@
 {% block title %} Add Product {%  endblock %}
 
 {% block content %}
-<form action="" method="post">
+<form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Add" class="btn btn-success">
