--- a/product/templates/product/product_update.html
+++ b/product/templates/product/product_update.html
@@ -2,7 +2,7 @@
 {% block title %} Update Product {% endblock %}
 
 {% block content %}
-<form action="" method="post">
+<form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Edit" class="btn btn-primary">
