--- a/product/templates/product/product_confirm_delete.html
+++ b/product/templates/product/product_confirm_delete.html
@@ -5,6 +5,13 @@
 <form action="" method="post">
     {% csrf_token %}
     {{ product }}, 이거 진짜 지울 거야?
+    <div>
+        {% if product.image %}
+            <img src="{{ product.image.url }}" alt="{{ product }}" class="image-detail">
+        {% else %}
+            이미지 없음
+        {% endif %}
+    </div>
     <input type="submit" value="찐?" class="btn btn-danger">
     <input type="button" value="취소" onclick="history.back();" class="btn btn-warning">
 </form>
